--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,30 @@ html {
   --light-black: #212121;
   --button-gray: #f5f4fa;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+}
+p {
+  margin: 0px;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+button {
+  border: 1px solid transparent;
+}
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -25,15 +49,16 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .section-business {
   padding: 200px 0;
   text-align: center;
   background-color: var(--background-grey);
 }
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
+
 .header {
   display: flex;
   align-items: center;
@@ -170,11 +195,11 @@ body {
 .bussiness button {
 }
 /*features або Особливості style below*/
-.section-features {
+.features {
   padding-top: 94px;
-  padding-bottom: 94px;
+  padding-bottom: 0px;
 }
-.section-features .blank {
+.features .blank {
   display: none;
   margin: 0px;
   padding: 0px;
@@ -190,7 +215,7 @@ body {
 .features-item:last-child {
   margin-right: 0px;
 }
-.section-features .name {
+.features .name {
   margin-top: 0px;
   margin-bottom: 10px;
 
@@ -199,7 +224,7 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
 }
-.section-features .description {
+.features .description {
   margin: 0px;
   padding: 0px;
 
@@ -208,7 +233,7 @@ body {
   color: var(--grey);
 }
 /*studio affairs або Чим ми займаємося style below*/
-.section-studioaffairs {
+.studioaffairs {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -228,10 +253,9 @@ body {
 }
 
 /*our team styles below*/
-.section-team {
+.team {
   color: var(--light-black);
-  padding-top: 94px;
-  padding-bottom: 94px;
+
   background-color: var(--background-lightgrey);
 }
 .team-list {
@@ -356,7 +380,6 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
   padding: 0px;
-  background-color: var(--white);
 
   /* max-width: 370px; */
 }
@@ -406,6 +429,7 @@ body {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
+  background-color: var(--white);
 }
 
 .portfolio-button {
@@ -429,15 +453,13 @@ body {
   color: var(--white);
   padding-right: 25px;
   padding-left: 25px;
-
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  border-style: none;
 }
-.portfolio button:hover,
-.portfolio button:focus {
+.portfolio-button:hover,
+.portfolio-button:focus {
   background: var(--blue);
   color: var(--white);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 .portfolio-head-blank {
   display: none;
